[package]
name = "qfg5reenigne"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "23.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
byteorder = "1.5.0"
glyphon = "0.7.0"
bmp = "0.5.0"
clap = { version = "4.5.21", features = ["derive"] }

[dependencies.image]
version = "0.24"
default-features = false
features = []